--- a/projects.json
+++ b/projects.json
@@ -1,17 +1,15 @@
-data = [
+[
   {
-    "category":     "Fun",
-    "title":        "Project One",
-    "url":          "http://www.projectone.com",
-    "description":  "This was one great project",
-    "image":        "src='source'"
+    "category" :     "Fun",
+    "title" :        "Project One",
+    "url" :          "http://www.projectone.com",
+    "description" :  "This was one great project"
   },
 
   {
-    "category":     "Work",
-    "title":        "Project Two",
-    "url":          "http://www.projecttwo.com",
-    "description":  "This was another great project",
-    "image":        "src='source'"
-  },
-];
+    "category" :     "Work",
+    "title" :        "Project Two",
+    "url" :          "http://www.projecttwo.com",
+    "description" :  "This was another great project"
+  }
+]
