--- a/projects.json
+++ b/projects.json
@@ -1,14 +1,14 @@
 [
   {
     "category" :     "Fun",
-    "title" :        "Project One",
+    "title" :        "Great Project One",
     "url" :          "http://www.projectone.com",
     "description" :  "This was one great project"
   },
 
   {
     "category" :     "Work",
-    "title" :        "Project Two",
+    "title" :        "Fantastic Project Two",
     "url" :          "http://www.projecttwo.com",
     "description" :  "This was another great project"
   }
