--- a/projects.json
+++ b/projects.json
@@ -11,5 +11,12 @@
     "title" :        "Fantastic Project Two",
     "url" :          "http://www.projecttwo.com",
     "description" :  "This was another great project"
+  },
+
+  {
+    "category" : "Extraneous",
+    "title" :     "Mediocre Project Three",
+    "url" : "http://www.projectthree.com",
+    "description" : "This project was nothing special"
   }
 ]
